--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -1,4 +1,23 @@
 .ui.borderless.menu{
   background-color:#f5f5f5;
-  margin-left:10px;
+  border:none;
+  box-shadow:none;
+}
+.ui.centered.grid.container{
+  margin-top:30px;
+}
+
+.ui.fluid.container{
+  margin-top:30px;
+  margin-bottom:10px;
+}
+
+.footer{
+  margin-top:30px;
+  background:black;
+  color:white;
+}
+
+.ui.borderless.compact.menu{
+  background: none;
 }
